--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,17 +2,22 @@
   {% assign default_paths = site.pages | map: "path" %}
   {% assign page_paths = site.navigation_pages | default: default_paths %}
   <a class="navigation__branding" href="{{ "/" | relative_url }}">
-    <span class="navigation__logo"><img src="{{ "/assets/images/icon.png" | relative_url }}" class="navigation__logo-img" alt=""></span>
-    <span class="navigation__title">{{ site.title | escape }}</span>
+    <span class="navigation__logo"><img src="{{ "/assets/images/large-logo.png" | relative_url }}" class="navigation__logo-img" alt="{{ site.title | escape }}"></span>
   </a>
   <div class="navigation__links">
-    {% if page_paths %}
-      {% for path in page_paths %}
-        {% assign my_page = site.pages | where: "path", path | first %}
-        {% if my_page.title %}
-          <a class="navigation__link{% if my_page.url == page.url %} navigation__link--active{% endif %}" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-        {% endif %}
-      {% endfor %}
-    {% endif %}
+    {% for item in site.menus.main %}
+    <div class="navigation__section">
+      <span>{{ item.title }}</span>
+      {% if item.children %}
+      <div class="navigation__menu">
+        {% for item in item.children %}
+        <div class="navigation__menu__item">
+          <a href="{{ item.url }}">{{ item.title }}</a>
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+    </div>
+    {% endfor %}
   </div>
 </nav>
