--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -42,7 +42,8 @@ $primary-font-family: $system-font-family;
 $font-xs: 10px;
 $font-sm: 16.18px;
 $font-md: 26.17924px;
-$font-xl: 42.35801032px;
+$font-lg: 42.35801032px;
+$font-xl: 68.53526069776px;
 
 // Default container widths
 $container-width: 80rem;
