--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,6 @@
 <nav class="navigation" role="navigation">
-  {% assign default_paths = site.pages | map: "path" %}
-  {% assign page_paths = site.navigation_pages | default: default_paths %}
-  <a class="navigation__branding" href="{{ "/" | relative_url }}">
-    <span class="navigation__logo"><img src="{{ "/assets/images/large-logo.png" | relative_url }}" class="navigation__logo-img" alt="{{ site.title | escape }}"></span>
+  <a class="navigation__logo" href="{{ "/" | relative_url }}">
+    <img src="{{ "/assets/images/large-logo.png" | relative_url }}" class="navigation__logo-img" alt="{{ site.title | escape }}">
   </a>
   <div class="navigation__links">
     {% for item in site.menus.main %}
@@ -19,5 +17,12 @@
       {% endif %}
     </div>
     {% endfor %}
+    <div class="navigation__search">
+      <svg xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 512 512">
+        <path
+          d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+      </svg>
+    </div>
   </div>
 </nav>
