--- a/_scss/_button.scss
+++ b/_scss/_button.scss
@@ -1,11 +1,1 @@
-.button {
-    display: inline-block;
-    border: 1px solid lighten($link-color, 40%);
-    border-radius: 50px;
-    padding: 15px 30px;
-    font-weight: 300;
-
-    &:hover {
-        background-color: lighten($link-color, 49%);
-    }
-}
+// button styles, see style guide
