--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   @include container($container-padding);
   border-top: 1px solid $accent-color;
-  padding: 30px 0;
+  padding: 1rem 0;
   margin-top: 80px;
   color: $link-color;
 }
