--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -2,7 +2,11 @@
 @import 'variables';
 @import 'mixins';
 // stylesheets
+@import 'article';
 @import 'button';
+@import 'cardnav';
 @import 'default';
 @import 'footer';
 @import 'navigation';
+@import 'pagelayout';
+@import 'toc';
