wip: meeting with Kristen

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -15,7 +15,7 @@ layout: default
     </div>
     <div class="pagelayout__docpanels__sidepanel">
       <h5>{{ site.data.globals.panels.documentation.panel2 }}</h5>
-      This will need to be defined in the content's front matter
+      List of anchor lists which are generated from the article's headings.
     </div>
   </div>
 </div>
