--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -46,5 +46,4 @@ $font-lg: 42.35801032px;
 $font-xl: 68.53526069776px;
 
 // Default container widths
-$container-width: 80rem;
-$container-padding: 1rem;
+$container-padding: 1vw;
