--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-  <div class="footer__container">
-      {{ site.data.globals.footer.notice }}
+<footer class="footer footer__container">
+  <div class="footer__container__inner">
+    {{ site.data.globals.footer.notice }}
   </div>
 </footer>
