feat: guide function, release notes index, extend layouts, etc.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
-<article class="pagelayout pagelayout__page">
-{{ content }}
+<article class="pagelayout pagelayout__page pagelayout__page__container">
+    <div class="pagelayout__page__container__inner">
+        {{ content }}
+    </div>
 </article>
