--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -21,7 +21,8 @@ $primary-color: $navyblue;
 $text-color: $navyblue;
 $link-color: $navyblue;
 $accent-color: $babyblue;
-
+$border-color: rgba($navyblue,0.2);
+$panel-color: rgba($babyblue,0.1);
 
 /** 
  * TYPOGRAPHY
