--- a/_layouts/guides.html
+++ b/_layouts/guides.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 ---
-<div class="pagelayout pagelayout__tocpost">
+<div class="pagelayout pagelayout__docpanels">
   <div class="pagelayout__docpanels__sidenav">
     Assuming this left navigation will need to be generated from content headings, unless this is to be managed as front matter or in the global menus yaml?
   </div>
   <div class="pagelayout__docpanels__content">
     {% include article.html %}
+  </div>
+  <div class="pagelayout__docpanels__sidepanels">
+    <div class="pagelayout__docpanels__sidepanel">
+      {% include panel-anchorlist.html %}
+    </div>
   </div>
 </div>
