--- a/_layouts/sdk.html
+++ b/_layouts/sdk.html
@@ -10,13 +10,10 @@ layout: default
   </div>
   <div class="pagelayout__docpanels__sidepanels">
     <div class="pagelayout__docpanels__sidepanel">
-      <h5>{{ site.data.globals.panels.sdk.panel1 }}</h5>
-      1. The guides shown here need to be controlled within the guide content page itself
-      2. If there are no guides, this section should be hidden
+      {% include panel-guides.html %}
     </div>
     <div class="pagelayout__docpanels__sidepanel">
-      <h5>{{ site.data.globals.panels.sdk.panel2 }}</h5>
-      List of anchor lists which are generated from the article's headings.
+      {% include panel-codesample.html %}
     </div>
   </div>
 </div>
