--- a/_scss/_pagelayout.scss
+++ b/_scss/_pagelayout.scss
@@ -1,14 +1,14 @@
+// TODO: These layouts will be split into own stylesheets with simplified class names
+
 .pagelayout {
   // Layout with ToC and side panels
   &__docpanels {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: 2rem;
 
     &__sidenav {
-      background-color: $cream;
+      background-color: $panel-color;
       padding: 1em 1em 2em 1em;
-      margin-top: 1rem;
       margin-right: 1.5rem;
     }
 
@@ -16,35 +16,61 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-    }
-
-    &__sidepanel {
-      background-color: $cream;
-      padding: 1em 1em 2em 1em;
-      margin-top: 1rem;
-      margin-left: 1.5rem;
+      background: $panel-color;
     }
   }
-
-  // Layout with ToC only
-
-  &__tocpost {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    margin-top: 2rem;
-
-    &__sidenav {
-      background-color: $cream;
-      padding: 1em 1em 2em 1em;
-      margin-top: 1rem;
-      margin-right: 1.5rem;
-    }
-  }
-
 
   // Layout for Release Notes
 
-  &__notes {
-    margin-top: 1rem;
+  &__index {
+    &__container {
+      width: 100%;
+    }
+    &__content {
+      display: grid;
+      grid-template-columns: 1fr 4fr;
+    }
+    &__sidenav {
+      background-color: $panel-color;
+      padding: 1em 1em 2em 1em;
+      margin-right: 1.5rem;
+    }
+
+    &__header {
+      margin-bottom: 1em;
+      padding-bottom: 1em;
+      border-bottom: 1px solid $border-color;
+    }
+    &__item {
+      margin-bottom: 1em;
+      padding-bottom: 1em;
+      border-bottom: 1px solid $border-color;
+    }
+    &__title {
+      font-size: $font-md;
+    }
+    &__meta {
+      font-size: $font-xs;
+    }
+    &__excerpt {
+      font-size: $font-sm;
+    }
+    &__link {
+      font-size: $font-xs;
+      text-decoration: underline;
+    }
   }
+
+  // General layout
+
+  &__page {
+    &__container {
+      width: 100%;
+      &__inner {
+        padding-left: $container-padding;
+        padding-right: $container-padding;
+      }
+    }
+  }
+
 }
