--- a/_includes/article.html
+++ b/_includes/article.html
@@ -4,7 +4,7 @@
       <h1 class="article__title" itemprop="name headline">{{ page.title | escape }}</h1>
       <p class="article__meta">
         <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-          {% assign date_format = site.minima.date_format | default: "%-d %b %Y" %}
+          {% assign date_format = site.minima.date_format | default: '%-d %b %Y' %}
           Last updated: {{ page.date | date: date_format }}
         </time>
         {% if page.author %}
