--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -13,7 +13,7 @@ layout: default
       </div>
       {% assign posts = site.release-notes | sort: post.date | reverse %}
       {% for item in posts %}
-      <article class="pagelayout__index__item" data-date={{ item.date | date: '%B %Y'" | slugify }} {% for tag in item.tags %}data-tag-{{tag | slugify }} {% endfor %}>
+      <article class="pagelayout__index__item" data-date={{ item.date | date: '%B %Y' | slugify }} {% for tag in item.tags %}data-tag-{{tag | slugify }} {% endfor %}>
         <div class="pagelayout__index__title" itemprop="name headline">{{ item.title | escape }}</div>
         <p class="pagelayout__index__meta">
           <time datetime="{{ item.date | date_to_xmlschema }}" itemprop="datePublished">
