feat: 'On This Page' anchor list

--- a/_includes/article.html
+++ b/_includes/article.html
@@ -15,7 +15,7 @@
     </header>
 
     <div class="article__content" itemprop="articleBody">
-      {{ content }}
+      {% include content-anchorheadings.html html=content anchorBody="#" headerAttrs="class='article__heading'" anchorClass="article__anchor" %}
     </div>
     
   </div>
