--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'mixins';
 // stylesheets
+@import 'anchorlist';
 @import 'article';
 @import 'button';
 @import 'cardnav';
