--- a/_scss/_anchorlist.scss
+++ b/_scss/_anchorlist.scss
@@ -1,18 +1,16 @@
-.toc {
+.anchorlist {
   &__menu {
     padding-left: 0;
     list-style-type: none;
   }
-
   &__submenu {
     padding-left: 1em;
     list-style-type: none;
   }
-
   &__item {
     line-height: 2;
     &__active {
-      font-weight: bolder;
+      font-weight: 900;
     }
   }
 
