--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -15,10 +15,8 @@ main {
 a {
   color: $link-color;
   text-decoration: none;
-  font-size: $font-sm;
-
   &:hover {
-    color: $primary-color;
+    color: $accent-color;
   }
 }
 
