feat: mobile responsive docpanel layouts

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div>
-  <div class="navigation__container__inner">
+  <div class="navigation__container__inner navigation__container__site">
     <div class="navigation__menu">
       {% for item in site.menus.main %}
         <a class="navigation__menu__item" href="{{ item.url }}">{{ item.title }}</a>
