--- a/_scss/_article.scss
+++ b/_scss/_article.scss
@@ -1,19 +1,30 @@
 .article {
+  &__container {
+    width: 100%;
+    &__inner {
+      padding-left: $container-padding;
+      padding-right: $container-padding;
+    }
+  }
+
   &__meta {
     font-size: $font-xs;
   }
+
   &__title {
     font-size: $font-lg;
   }
 
   &__heading {
-    > .article__anchor {
+    >.article__anchor {
       display: none;
     }
-    &:hover > .article__anchor {
+
+    &:hover>.article__anchor {
       display: inline-block;
     }
   }
+
   &__anchor {
     font-size: 0.5em;
     padding-bottom: 0.333em;
