--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -19,6 +19,13 @@
         color: $navyblue;
       }
     }
+    &__site {
+      @media (max-width: $breakpoint-lg) {
+        flex-direction: column;
+        padding-bottom: 1em;
+        align-items: flex-start;
+      }
+    }
 
   }
 
@@ -49,6 +56,7 @@
 
   &__search { 
     width: 480px;
+    max-width: 100%;
     display: flex;
     align-items: flex-end;
     justify-content: center;
