--- a/_scss/_pagelayout.scss
+++ b/_scss/_pagelayout.scss
@@ -4,20 +4,51 @@
   // Layout with ToC and side panels
   &__docpanels {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: min-content minmax(0px, max-content);
+        word-wrap: break-word;
+    @media (min-width: $breakpoint-xl) {
+      grid-template-columns: 2fr 6fr 2fr;
+    }
 
     &__sidenav {
       background-color: $panel-color;
       padding: 1em 1em 2em 1em;
+      width: 240px;
       margin-right: 1.5rem;
+      position: relative;
+      &__toggle {
+        @media (min-width: $breakpoint-lg) {
+          display: none;
+        }
+        position: sticky;
+        top: 0.5rem;
+        margin-left: auto;
+        cursor: pointer;
+        width: 1rem;
+        height: 1rem;
+        svg {
+          fill: $navyblue;
+        }
+      }
+      &__collapsed {
+        width: 1rem;
+        overflow: hidden;
+        nav {
+          visibility: hidden;
+        }
+      }
     }
 
     &__sidepanels {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      background: $panel-color;
+      display: none;
+      @media (min-width: $breakpoint-xl) {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        background: $panel-color;
+      }
     }
+
   }
 
   // Layout for Release Notes
