updated documentation page layout and fixed guide linking

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -14,12 +14,13 @@ layout: default
   <div class="pagelayout__docpanels__content">
     {% include article.html %}
   </div>
-  <div class="pagelayout__docpanels__sidepanels">
+    <div class="pagelayout__docpanels__sidepanels">
     <div class="pagelayout__docpanels__sidepanel">
       {% include panel-guides.html %}
     </div>
+  <div class="pagelayout__docpanels__sidepanels">
     <div class="pagelayout__docpanels__sidepanel">
-      {% include panel-codesample.html %}
+      {% include panel-anchorlist.html %}
     </div>
   </div>
 </div>
