--- a/_scss/_article.scss
+++ b/_scss/_article.scss
@@ -1,4 +1,8 @@
 .article {
+  font-family: Verdana, sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+
   &__container {
     width: 100%;
     &__inner {
