--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -4,6 +4,7 @@
 
     width: 100%;
     border-bottom: 1px solid $accent-color;
+    height: var(--header-height);
 
     &__inner {
       padding-left: $container-padding;
