--- a/_src/template/default.html
+++ b/_src/template/default.html
@@ -7,13 +7,9 @@
 
   <body>
 
-    <main>
     {% include navigation.html %}
-    {{ content }}
-    </main>
-
+    <main>{{ content }}</main>
     {% include footer.html %}
-
     {% include scripts.html %}
 
   </body>
