--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -1,15 +1,11 @@
 body {
   font-family: $primary-font-family;
   color: $text-color;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
 }
 
 main {
-  flex: 1;
-  height: 100%;
-  width: 100%;
+  height: var(--body-height);
+  overflow: hidden;
 }
 
 a {
