--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -56,7 +56,14 @@ $container-padding: 1vw;
 
 // Height calculations
 :root {
-    --header-height: 102px;
-    --footer-height: 52px;
-    --body-height: calc( var(--viewport-height) - ( var(--header-height) + var(--footer-height) + 2px ) );
+    @media (max-width: calc( $breakpoint-lg - 1px ) ) {
+            --header-height: 148px;
+            --footer-height: 52px;
+            --body-height: calc(var(--viewport-height) - (var(--header-height) + var(--footer-height) + 2px));
+    }
+    @media (min-width: $breakpoint-lg) {
+        --header-height: 102px;
+        --footer-height: 52px;
+        --body-height: calc( var(--viewport-height) - ( var(--header-height) + var(--footer-height) + 2px ) );
+    }
 }
