--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -19,7 +19,8 @@ layout: default
       {% include panel-guides.html %}
     </div>
     <div class="pagelayout__docpanels__sidepanel">
-      {% include panel-codesample.html %}
+      {% include panel-anchorlist.html %}
     </div>
   </div>
 </div>
+      
