--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -7,6 +7,8 @@
 @import 'button';
 @import 'cardnav';
 @import 'default';
+@import 'filterdate';
+@import 'filtertag';
 @import 'footer';
 @import 'navigation';
 @import 'pagelayout';
