--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -64,3 +64,12 @@ h6 {
   margin-bottom: 1rem;
   font-weight: 700;
 }
+
+table {
+  width: 100%;
+  th, td {
+    min-width: 5vw;
+    padding: 0.25em;
+    margin: 0.25em;
+  }
+}
