--- a/_scss/_rogue.scss
+++ b/_scss/_rogue.scss
@@ -7,7 +7,49 @@ $gray-800: #343a40;
 
 $font-family-monospace: 'Ubuntu Mono', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', 'Noto Serif SC', 'STSong', monospace;
 
+
+.rogue__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow-x: scroll;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 9999;
+    display: none;
+    .highlighter-rouge {
+        max-height: unset;
+    }
+    .rogue__modal__open{
+        display: none;
+    }
+    .highlight {
+        margin-top: 0 !important;
+        margin-bottom: 0 !important;
+    }
+}
+
+.rogue__modal__close {
+    position: fixed;
+    top: 0.5rem;
+    right: 1.5rem;
+    font-size: 3rem;
+    color: $white;
+    cursor: pointer;
+}
+
+.rogue__modal__open {
+    text-align: right;
+    > div {
+        display: inline;
+        cursor: pointer;
+    }
+}
+
 .highlighter-rouge {
+    max-height: 66.7vh;
+    overflow-y: scroll;
     .lineno {
         text-align: left;
     }
