--- a/_scss/_rogue.scss
+++ b/_scss/_rogue.scss
@@ -7,6 +7,27 @@ $gray-800: #343a40;
 
 $font-family-monospace: 'Ubuntu Mono', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', 'Noto Serif SC', 'STSong', monospace;
 
+.rogue__toolbar {
+    background-color: darken($code-bg, 10%);
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1em;
+    align-items: center;
+    padding: 0.5em 1em;
+    svg {
+        height: 1.5rem;
+        width: auto;
+        cursor: pointer;
+        fill: $tea;
+    }
+}
+
+.highlighter-rouge.rogue__expanded {
+    max-height: unset;
+}
+
 .highlighter-rouge {
     max-height: 66.7vh;
     overflow-y: scroll;
@@ -17,7 +38,7 @@ $font-family-monospace: 'Ubuntu Mono', 'SFMono-Regular', 'Menlo', 'Monaco', 'Con
     figure.highlight,
     pre.highlight {
         padding: 1rem 1.5rem;
-        margin: 1.5rem 0;
+        margin: 0;
         overflow: auto;
         line-height: 1.4rem;
         position: relative;
@@ -98,7 +119,8 @@ figure.highlight::before {
     .highlight table {
         background: $code-bg;
         color: $gray-200;
-        border-radius: 4px;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
         font-size: 1rem;
     }
 
