--- a/_scss/_rogue.scss
+++ b/_scss/_rogue.scss
@@ -24,6 +24,33 @@ $font-family-monospace: 'Ubuntu Mono', 'SFMono-Regular', 'Menlo', 'Monaco', 'Con
     }
 }
 
+/* Add CSS styles for the modal window */
+.rogue__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: scroll;
+    z-index: 5;
+    background-color: darken($code-bg, 10%);
+    .highlighter-rouge {
+        max-height: unset;
+    }
+    &__content {
+        padding: 20px;
+        overflow: auto;
+    }
+    &__close {
+        position: absolute;
+        cursor: pointer;
+        font-size: 2rem;
+        color: $white;
+        top: 1rem;
+        right: 2rem;
+    }
+}
+
 .highlighter-rouge.rogue__expanded {
     max-height: unset;
 }
