feat: add tab support for code blocks

--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'filterdate';
 @import 'filtertag';
 @import 'footer';
+@import 'jekylltabs';
 @import 'navigation';
 @import 'pagelayout';
 @import 'panel';
