feat: updated layout designs

--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="pagelayout pagelayout__index pagelayout__index__container">
   <div class="pagelayout__index__content">
-    <div class="pagelayout__index__sidenav">
+    <div class="sidenav">
       {% include filtertag.html collection=site.release-notes %}
       {% include filterdate.html collection=site.release-notes %}
     </div>
