--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -12,7 +12,7 @@ a {
   color: $link-color;
   text-decoration: none;
   &:hover {
-    color: $accent-color;
+    text-decoration: underline;
   }
 }
 
