--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -12,11 +12,10 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
     }
     &__global {
-      background-color: $babyblue;
-      // temp: don't wrap until we know what this looks like
+      padding-top: 9px;
+      background-color: $panel-color;
       overflow: hidden;
       white-space: nowrap;
       .navigation__menu__item:hover {
@@ -24,10 +23,11 @@
       }
     }
     &__site {
+      background-color: $panel-color;
       @media (max-width: $breakpoint-lg) {
         flex-direction: column;
         padding-bottom: 1em;
-        align-items: flex-start;
+        align-items: center;
       }
     }
 
@@ -35,9 +35,20 @@
 
   &__logo {
     margin-right: 10px;
+    display: flex;
+    align-content: center;
+    align-items: center;
     img {
       height: $font-lg;
       width: auto;
+    }
+    span {
+      color: $text-color;
+      font-size: $font-md;
+      padding-left: 0.25em;
+    }
+    &:hover {
+      text-decoration: none;
     }
   }
   
@@ -47,10 +58,11 @@
     &__item {
       padding-top: 1em;
       padding-bottom: 1em;
-      &:hover {
-        color: $babyblue;
-      }
     }
+  }
+
+  &__alt {
+    margin-left: auto;
   }
 
   &__link {
@@ -65,19 +77,11 @@
     align-items: flex-end;
     justify-content: center;
     position: relative;
-    
-    svg {
-      position: absolute;
-      top: 0.4em;
-      left: 0.5em;
-      height: 1rem;
-      width: auto;
-      fill: $primary-color;
-    }
+
     input {
-      padding: 0.2em 0.2em 0.2em 2em;
+      padding: 0.2em 0.2em 0.2em 0.5em;
       width: 100%;
-      border: 1px solid $border-color;
+      border: 0px solid $border-color;
       &::placeholder {
         color: $navyblue;
       }
