feat: update base font and colors

--- a/_scss/_anchorlist.scss
+++ b/_scss/_anchorlist.scss
@@ -12,7 +12,7 @@
     border-left: 1px solid $babyblue;
     &__active {
       border-left: 2px solid $babyblue;
-      color: $text-color;
+      color: $active-color;
     }
     > a {
       display: inline-block;
