--- a/_scss/_filtertag.scss
+++ b/_scss/_filtertag.scss
@@ -1,8 +1,9 @@
 .filtertag {
   &__link {
     cursor: pointer;
+    color: $link-color;
     &__active {
-      font-weight: 700;
+      color: $active-color;
     }
   }
   &__item {
