--- a/_scss/_filtertag.scss
+++ b/_scss/_filtertag.scss
@@ -2,6 +2,7 @@
   &__link {
     cursor: pointer;
     color: $link-color;
+    display: block;
     &__active {
       color: $active-color;
     }
