feat: add callout banners

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -18,7 +18,9 @@ $gold: rgb(255, 164, 0);
 
 // Additional colors
 $black: rgb(38, 38, 38);
+$lightgrey: rgb(245, 245, 245);
 $blue: rgb(33, 133, 208);
+$red: rgb(189, 11, 0);
 
 // Variables
 $primary-color: $navyblue;
