--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -14,7 +14,7 @@
     }
     &__global {
       padding-top: 12px;
-      padding-bottom: 12px;
+      padding-bottom: 30px;
       background-color: $panel-color;
       overflow: hidden;
       white-space: nowrap;
@@ -37,8 +37,8 @@
   &__logo {
     margin-right: 10px;
     display: flex;
-    align-content: center;
-    align-items: center;
+    align-content: flex-end;
+    align-items: flex-end;
     img {
       height: 20px;
       width: auto;
@@ -48,7 +48,7 @@
       font-size: 1.25rem;
       font-weight: 300;
       color: $navyblue;
-      padding-left: 0.5em;
+      padding-left: 1rem;
     }
     &:hover {
       text-decoration: none;
@@ -58,12 +58,13 @@
   &__menu {
     display: flex;
     gap: 1em;
+    margin-left: -0.375rem;
     &__item {
       font-size: 0.875rem;
-      padding-top: 1em;
-      padding-bottom: 1em;
+      padding: 0.375rem;
       border-bottom: 2px solid transparent;
       &__active {
+        color: $navyblue;
         text-decoration: none;
         border-bottom-color: $babyblue;
       }
@@ -85,11 +86,12 @@
     margin-left: 0.25rem;
 
     input {
-      padding: 3px 0 3px 8px;
+      padding: 6px 0 6px 8px;
       width: 100%;
       border: 1px solid transparent;
       outline: 1px solid transparent;
       &::placeholder {
+        opacity: 1;
         font-size: 0.75em;
         color: $navyblue;
       }
