feat: refine example api docs

--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -4,6 +4,7 @@
 // stylesheets
 @import 'alert';
 @import 'anchorlist';
+@import 'apiparameters';
 @import 'article';
 @import 'button';
 @import 'cardnav';
