--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -37,7 +37,7 @@ $panel-color: rgba($babyblue,0.3);
 
 $system-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 $primary-font-family: 'Helvetica', $system-font-family;
-
+$mono-font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
 /** 
  * MEASUREMENTS
