--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -4,7 +4,7 @@
 // stylesheets
 @import 'alert';
 @import 'anchorlist';
-@import 'apiparameters';
+@import 'apidoc';
 @import 'article';
 @import 'button';
 @import 'cardnav';
